--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -24,6 +24,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+      
+      # Install pre-commit package
+      - name: Install xmllint
+        run: sudo apt install -y pre-commit
 
       # Install dependencies
       - name: Install dependencies
